--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "jsxImportSource": "theme-ui",
+    "experimentalDecorators": true,
     "paths": {
       "@/*": ["./src/*"]
     }
